--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>自己紹介サイト - SPA</title>
+    <title>自己紹介サイト</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -137,7 +137,7 @@
             </ul>
         </section>
         <section id="contact">
-            <h2>お問い合わせ</h2>
+            <h2>各種SNS</h2>
             <div class="social-links">
                 <a href="https://www.instagram.com/sta.sota" target="_blank">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
@@ -149,7 +149,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 私の自己紹介サイト</p>
+        <p>&copy; 2024 sta2の自己紹介サイト</p>
     </footer>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
