--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <li>サウナ</li>
                 <li>筋トレ</li>
                 <li>エヴァンゲリオン</li>
-                <li>読書と書きたいところですが書けるほど読んでないです</li>
+                <li>読書：世界一流エンジニアの思考法</li>
             </ul>
         </section>
         <section id="contact">
